--- a/styles.css
+++ b/styles.css
@@ -1,90 +1,118 @@
-
-html, body, p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serifS;
-    background: #EDEDED;
-    margin: 0;
-    text-align:center;
+html,
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serifS;
+  background: #ededed;
+  margin: 0;
+  padding: 0;
+  /* text-align: center; */
 }
 
-
 h1 {
-    padding-top: 2rem;
-    font-size: 3rem;
+  padding-top: 2rem;
+  font-size: 3rem;
 }
 
 h2 {
-    padding-top: 3rem;
+  padding-top: 3rem;
+  text-align: center;
 }
 
+h4 {
+    text-align: center;
+}
 
 .navbar ul {
-    display: flex;
-    justify-content: center;
-    padding: 1rem 1rem;
-    list-style-type: none;
-
+  display: flex;
+  justify-content: center;
+  padding: 1rem 1rem;
+  list-style-type: none;
 }
 
 .navbar li a {
-    display: block;
-    padding: .5rem 1rem;
-    color: inherit;
-    font-weight: bold;
-    font-size: 1.2rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  color: inherit;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .nav-background {
-    background: #DDDDDD;
-    box-shadow: 0 3px 3px rgba(0,0,0,0.23);
+  background: #dddddd;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.23);
+}
 
+.project1,
+.project2 {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-wrap: wrap;
 }
 
 .columns {
-    display: flex;
-    justify-content: center;
-    /* padding: 1rem; */
+  display: flex;
+  /* padding: 1rem; */
+  flex-wrap: wrap;
+  justify-content: center;
+    align-items: center;
 }
 
 .col {
-    /* padding: 1rem; */
-    /* margin: 1rem;
+  /* padding: 1rem; */
+  /* margin: 1rem;
     max-width: 32rem;
     max-height: 40rem;
     border-radius: 0.5rem;
     object-fit: contain; */
+    /* display: flex;
+    justify-content: center;
+    flex-wrap: wrap; */
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .contact {
-    background-color: #DDDDDD;
+  background-color: #dddddd;
+  padding: 3em;
+}
+
+.contact > p {
+    margin: 0;
+    line-height: 1.5;
 }
 
 .about {
-    padding: 6rem;
-   text-align: center;
+  padding: 6rem;
+  text-align: center;
 }
 
 .strong {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .project-img {
-    max-width: 32rem;
-    max-height: 40rem;
-    border-radius: 0.5rem;
+  max-width: 32rem;
+  max-height: 40rem;
+  /* border-radius: 0.5rem; */
+  object-fit: contain;
+  padding: 1rem;
+}
+
+.project-img > img {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
 .home {
-    color:black;
-    display: flex;
-    justify-content: center;
-    padding: 2rem 2rem;
+  color: black;
+  display: flex;
+  justify-content: center;
+  padding: 2rem 2rem;
 }
-
 
 /* .main {
     object-fit: contain;
@@ -95,3 +123,12 @@ h2 {
     font-weight: bold;
     box-shadow: 0 3px 3px rgba(0,0,0,0.23);
 } */
+
+@media screen and (max-width: 768px) {
+    .columns {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+}
